Add project configuration and template setup
- Add package-lock.json for dependency versions
- Rename index.html to index.html.template for clean repo sharing
- Update .gitignore to exclude local config and Terraform state
- Keep actual index.html local-only for testing

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ yarn-error.log*
 *.log
 dist/
 build/
+
+# Local configuration - don't commit actual credentials
+public/index.html
+
+# Terraform state files - contain sensitive data
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/.terraform.lock.hcl
