Fix serve command to serve public directory
Update npm serve script to properly serve the public directory instead of root.
This ensures the HTML demo is accessible at http://localhost:8080/ instead of
requiring the /public/ path.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "admin:register": "node scripts/admin-register.js",
     "client:auth": "node scripts/client-auth.js",
-    "serve": "npx http-server -p 8080"
+    "serve": "npx http-server public -p 8080"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.600.0",
