Enhance infrastructure outputs and admin registration
Terraform:
- Add HTML configuration output with actual User Pool ID and Client ID values
- Add SMS sandbox setup instructions for MFA testing
- Minor configuration improvements

CloudFormation:
- Update stack configuration
- Add README documentation

Scripts:
- Improve admin registration script with better error handling
- Add user verification status checking

--- a/cloudformation/cognito-stack.yaml
+++ b/cloudformation/cognito-stack.yaml
@@ -57,7 +57,7 @@ Parameters:
   CreateAdminUser:
     Type: String
     Default: 'true'
-    Description: Whether to create an IAM user for admin operations
+    Description: Whether to create an IAM user for admin operations. After stack creation, use 'node scripts/admin-register.js' with REAL, verifiable email and phone numbers to create Cognito users.
     AllowedValues:
       - 'true'
       - 'false'
@@ -206,9 +206,11 @@ Resources:
           StringAttributeConstraints:
             MinLength: '0'
             MaxLength: '2048'
+        # Phone number is OPTIONAL - SMS MFA requires expensive AWS origination numbers
+        # Users can use TOTP/Authenticator apps instead of SMS for MFA
         - Name: phone_number
           AttributeDataType: String
-          Required: true
+          Required: false  # Changed to optional - SMS is not viable without paid origination
           Mutable: true
           DeveloperOnlyAttribute: false
           StringAttributeConstraints:
