Change deletion protection default to INACTIVE for easier testing
- Update Terraform default from ACTIVE to INACTIVE in variables.tf
- Update terraform.tfvars.example with new default and clearer comments
- Update CloudFormation template default parameter to INACTIVE
- Update CloudFormation parameters.json example values
- Update documentation to reflect dev/test-friendly defaults

This allows teams to easily destroy user pools during development without
manually disabling deletion protection, while still allowing ACTIVE for
production deployments.

--- a/cloudformation/cognito-stack.yaml
+++ b/cloudformation/cognito-stack.yaml
@@ -48,8 +48,8 @@ Parameters:
 
   DeletionProtection:
     Type: String
-    Default: ACTIVE
-    Description: Whether to enable deletion protection
+    Default: INACTIVE
+    Description: Whether to enable deletion protection. Use INACTIVE for development/testing to allow easy cleanup
     AllowedValues:
       - ACTIVE
       - INACTIVE
